--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
     <io.fotoapparat.view.CameraView
         android:id="@+id/camera_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-</RelativeLayout>
+    <com.pg.facedetect.RectanglesView
+        android:id="@+id/rv_faceframe"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:rectanglesStrokeWidth="2dp"
+        app:rectanglesColor="@color/colorAccent"
+        android:layout_gravity="top"/>
+</FrameLayout>
